--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
   font-family: "Roboto Slab", serif;
   background-color: peachpuff;
-
+ 
 }
 
 header {
   text-align: center;
   padding: 20px;
-  background-color: #f2f2f2;
+  font-family :'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #bba7e9;
 }
 
 .started {
@@ -24,7 +25,10 @@ header {
 }
 
 .container {
+  margin-top: 150px;
+  margin-bottom: 20px;
   flex: 1;
+  flex-direction: column;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,16 +51,20 @@ header {
 
 h4 {
   color: black;
-  text-shadow: 2px 2px 4px grey;
+  text-shadow: 2px 2px 4px rgb(232, 232, 241);
 }
 
 .card {
   flex: 1;
   border: 1px solid black;
-  background-color: #fdfdff !important;
-  border-radius: 10px;
+  background-image: url("background.jpeg");
+  background-size: cover;
+  background-position: center;
+  overflow-y: scroll;
+  border-radius: 12px;
   padding: 50px;
-  margin: 50px auto;
+  margin-top: 40px;
+  margin-right: 20px;
   max-width: 900px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
