--- a/style.css
+++ b/style.css
@@ -1,14 +1,66 @@
 body {
   font-family: "Roboto Slab", serif;
   background-color: peachpuff;
- 
+
 }
 
 header {
   text-align: center;
   padding: 20px;
-  font-family :'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #bba7e9;
+}
+
+
+.chat-container {
+  width: 400px;
+  margin-top: 10px;
+  margin-bottom: 40px;
+  padding: 30px;
+  border: 1px solid #bba7e9;
+  border-radius: 5px;
+
+}
+
+.message {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+
+.user-message {
+  color: white;
+}
+
+.other-message {
+  color: black;
+}
+
+.message input[type="text"] {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.message input[type="submit"] {
+  padding: 5px 10px;
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.user-details {
+  margin-bottom: 10px;
+}
+
+.user-details input[type="text"] {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
 }
 
 .started {
